# TRIPLE_PILOT

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/libCrypt/: CMakelists.txt  libCrypt.c  libCrypt.h
lib/libDebug/: CMakelists.txt  libDebug.c  libDebug.h
lib/libError/: CMakelists.txt  libError.c  libError.h
lib/libFile/: CMakelists.txt  libFile.c  libFile.h
lib/libInject/: CMakelists.txt  libInject.c  libInject.h
lib/libMem/: CMakeLists.txt  libMem.c  libMem.h
lib/libProc/: CMakelists.txt  libProc.c  libProc.h
lib/libString/: CMakelists.txt  libString.c  libString.h
src/: main.c
toolchains/: clang.cmake  mingw.cmake
